--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <figure class="row">
         <!-- Figure Image -->
         <div class="col-md-8 offset-md-2 col-lg-4 offset-lg-0 g-mb-30">
-          <img class="w-100" src="image/yy.png" alt="Image Description">
+          <img class="w-100" src="image/yy.jpg" alt="Image Description">
         </div>
         <!-- End Figure Image -->
 
@@ -135,7 +135,7 @@
 
     <!-- Testimonials -->
     <section class="dzsparallaxer auto-init height-is-based-on-content use-loading g-bg-cover g-bg-white-opacity-0_1--after">
-      <div class="divimage dzsparallaxer--target w-100" style="height: 140%; background: url(image/bricks--white.png);"></div>
+      <div class="divimage dzsparallaxer--target w-100" style="height: 140%; background: url(image/bricks--white.jpg);"></div>
       <div class="container g-z-index-1 g-py-100">
         <!-- Testimonials -->
         <div class="row justify-content-center">
@@ -182,7 +182,7 @@
           <!-- Figure -->
           <figure class="u-info-v1-4 g-overflow-hidden mb-0">
             <!-- Figure Image -->
-            <img class="w-100 u-info-v1-4__item-regular g-transition-0_2" src="image/tllogo.png" alt="Image Description">
+            <img class="w-100 u-info-v1-4__item-regular g-transition-0_2" src="image/tllogo.jpg" alt="Image Description">
             <!-- End Figure Image-->
 
             <a class="cbp-caption cbp-singlePageInline u-link-v2" href="ajax/projects/projects-1.html"></a>
@@ -201,7 +201,7 @@
           <!-- Figure -->
           <figure class="u-info-v1-4 g-overflow-hidden mb-0">
             <!-- Figure Image -->
-            <img class="w-100 u-info-v1-4__item-regular g-transition-0_2" src="image/10.png" alt="Image Description">
+            <img class="w-100 u-info-v1-4__item-regular g-transition-0_2" src="image/10.jpg" alt="Image Description">
             <!-- End Figure Image-->
 
             <a class="cbp-caption cbp-singlePageInline u-link-v2" href="ajax/projects/projects-2.html"></a>
@@ -220,7 +220,7 @@
           <!-- Figure -->
           <figure class="u-info-v1-4 g-overflow-hidden mb-0">
             <!-- Figure Image -->
-            <img class="w-100 u-info-v1-4__item-regular g-transition-0_2" src="image/accu.png" alt="Image Description">
+            <img class="w-100 u-info-v1-4__item-regular g-transition-0_2" src="image/accu.jpg" alt="Image Description">
             <!-- End Figure Image-->
 
             <a class="cbp-caption cbp-singlePageInline u-link-v2" href="ajax/projects/projects-3.html"></a>
@@ -239,7 +239,7 @@
           <!-- Figure -->
           <figure class="u-info-v1-4 g-overflow-hidden mb-0">
             <!-- Figure Image -->
-            <img class="w-100 u-info-v1-4__item-regular g-transition-0_2" src="image/tenw.png" alt="Image Description">
+            <img class="w-100 u-info-v1-4__item-regular g-transition-0_2" src="image/tenw.jpg" alt="Image Description">
             <!-- End Figure Image-->
 
             <a class="cbp-caption cbp-singlePageInline u-link-v2" href="ajax/projects/projects-4.html"></a>
@@ -258,7 +258,7 @@
           <!-- Figure -->
           <figure class="u-info-v1-4 g-overflow-hidden mb-0">
             <!-- Figure Image -->
-            <img class="w-100 u-info-v1-4__item-regular g-transition-0_2" src="image/medi.png" alt="Image Description">
+            <img class="w-100 u-info-v1-4__item-regular g-transition-0_2" src="image/medi.jpg" alt="Image Description">
             <!-- End Figure Image-->
 
             <a class="cbp-caption cbp-singlePageInline u-link-v2" href="ajax/projects/projects-5.html"></a>
@@ -277,7 +277,7 @@
           <!-- Figure -->
           <figure class="u-info-v1-4 g-overflow-hidden mb-0">
             <!-- Figure Image -->
-            <img class="w-100 u-info-v1-4__item-regular g-transition-0_2" src="image/eimage.png" alt="Image Description">
+            <img class="w-100 u-info-v1-4__item-regular g-transition-0_2" src="image/eimage.jpg" alt="Image Description">
             <!-- End Figure Image-->
 
             <a class="cbp-caption cbp-singlePageInline u-link-v2" href="ajax/projects/projects-6.html"></a>
@@ -303,7 +303,7 @@
     <!-- Counters -->
     <section class="dzsparallaxer auto-init height-is-based-on-content">
       <!-- Parallax Image -->
-      <div class="dzsparallaxer--target w-100" style="height: 140%; background: url(image/pattern2.png)"></div>
+      <div class="dzsparallaxer--target w-100" style="height: 140%; background: url(image/pattern2.jpg)"></div>
       <!-- End Parallax Image -->
 
       <div class="container g-pt-100 g-pb-70">
