--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Breadcrumbs -->
     <section class="g-bg-black g-py-50">
       <div class="container">
-        <div class="d-sm-flex text-center">
+        <div class="d-sm-flex text-center justify-content-between">
           <div class="align-self-center">
             <h2 class="h3 g-font-weight-500 g-color-primary w-100 g-mb-500 g-mb-0--md">YUN YANG</h2>
           </div>
