--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <!-- Figure -->
           <figure class="u-info-v1-4 g-overflow-hidden mb-0">
             <!-- Figure Image -->
-            <img class="w-100 u-info-v1-4__item-regular g-transition-0_2" src="image/10.jpg" alt="Image Description">
+            <img class="w-100 u-info-v1-4__item-regular g-transition-0_2" src="image/ten.jpg" alt="Image Description">
             <!-- End Figure Image-->
 
             <a class="cbp-caption cbp-singlePageInline u-link-v2" href="ajax/projects/projects-2.html"></a>
