--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div>
       </div>
 
-      
+       <figure class="row">
 
        <div class="col-md-8 offset-md-2 col-lg-4 offset-lg-0 g-mb-30">
             <img class="w-100" src="image/tllogo.jpg" alt="Image Description">
