--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                 <i class="g-color-gray-light-v2 g-ml-5">/</i>
               </li>
               <li class="list-inline-item g-mr-5">
-                <a class="u-link-v5 g-color-main g-color-primary--hover" href="#!">Portfolio</a>
+                <a class="u-link-v5 g-color-main g-color-primary--hover" href="#!">About Me</a>
                 <i class="g-color-gray-light-v2 g-ml-5">/</i>
               </li>
               <li class="list-inline-item g-color-primary">
-                <span>About Me</span>
+                <span>Portfolio</span>
               </li>
             </ul>
           </div>
