--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
        <figure class="row">
          <div class="col-md-8 offset-md-2 col-lg-4 offset-lg-0 g-mb-30">
-            <img class="w-100" src="image/eimage.jpg" alt="Image Description" href="www.eimageglobal.net">
+            <img class="w-100" src="image/eimage.jpg" alt="Image Description" href="https://www.eimageglobal.net">
             <!-- End Figure Image-->     
         </div>
        <div class="col-md-8 offset-md-2 col-lg-4 offset-lg-0 g-mb-30">
