--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
                 <a class="u-link-v5 g-color-main g-color-primary--hover" href="#!">Home</a>
                 <i class="g-color-gray-light-v2 g-ml-5">/</i>
               </li>
-              <li class="list-inline-item g-mr-5">
-                <a class="u-link-v5 g-color-main g-color-primary--hover" href="#!">About Me</a>
-                <i class="g-color-gray-light-v2 g-ml-5">/</i>
-              </li>
+              
               <li class="list-inline-item g-color-primary">
                 <span>Portfolio</span>
+              </li>
+              <li class="list-inline-item g-mr-5">
+                <a class="u-link-v5 g-color-main g-color-primary--hover" href="aboutme.html">About Me</a>
+                <i class="g-color-gray-light-v2 g-ml-5">/</i>
               </li>
             </ul>
           </div>
