--- a/aboutme.html
+++ b/aboutme.html
@@ -98,8 +98,8 @@
                  <p>Here is a litte me about me. I am a mother of two adorable kids. Camille and Sophia are the greatest gifts, and I get a lot of inspiration from them.
    
                   <h2 class="h2 g-font-weight-500 g-color-primary w-100 g-mb-500 g-mb-0--md">Hobbies </h2>
-                 <p>I was original from China. I like chinese food. during my spare time, I always cooking chinese food. 
-                   I also like plants. I am enjoy working in the garden. </p>
+                 <p>I was original from China. I like chinese food. during my spare time, I always cook chinese food. 
+                   I also like plants. I love working in the garden. </p>
           </div>
           <!-- End Info -->
 
