--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
           <!-- Figure Info -->
           <div class="g-mb-50">
-            <p>I am an ambitious workaholic, but apart from that, pretty simple person. Whether it's branding, print, UI + UX I've got you covered. I strive to figure out the right solutions for your look to stand out amongst the rest.</p>
+            <p>I am an ambitious workaholic, but apart from that, pretty simple person. Whether it's branding, print, UI + UX, develop I've got you covered. I strive to figure out the right solutions for your look to stand out amongst the rest.</p>
             <p>As creatives, it's important that I strive to do work outside of obligation. This lets us stay ahead of the curve for our clients and internal projects. At the end of the day, it's important to not let being busy distract us from having fun.
               Smiling, laughing, and hanging helps us work together to achieve this.</p>
           </div>
