--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="container">
         <div class="d-sm-flex text-center justify-content-between">
           <div class="align-self-center">
-            <h2 class="h3 g-font-weight-500 g-color-primary w-100 g-mb-500 g-mb-0--md">YUN YANG</h2>
+            <h2 class="h3 g-font-weight-500 g-color-primary">YUN YANG</h2>
           </div>
 
           <div class="align-self-center ml-auto">
