--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
 
           <div class="align-self-center ml-auto">
             <ul class="u-list-inline">
-              <li class="list-inline-item g-mr-5">
-                <a class="u-link-v5 g-color-main g-color-primary--hover" href="#!">Home</a>
-                <i class="g-color-gray-light-v2 g-ml-5">/</i>
-              </li>
+             
               
               <li class="list-inline-item g-color-primary">
                 <span>Portfolio</span>
@@ -74,7 +71,7 @@
       <figure class="row">
         <!-- Figure Image -->
         <div class="col-md-8 offset-md-2 col-lg-4 offset-lg-0 g-mb-30">
-          <img class="w-100" src="image/yy.jpg" alt="Image Description">
+          <img class="w-100" src="image/yy1.jpg" alt="Image Description">
         </div>
         <!-- End Figure Image -->
 
