--- a/aboutme.html
+++ b/aboutme.html
@@ -48,10 +48,7 @@
 
           <div class="align-self-center ml-auto">
             <ul class="u-list-inline">
-              <li class="list-inline-item g-mr-5">
-                <a class="u-link-v5 g-color-main g-color-primary--hover" href="#!">Home</a>
-                <i class="g-color-gray-light-v2 g-ml-5">/</i>
-              </li>
+              
               <li class="list-inline-item g-mr-5">
                 <a class="u-link-v5 g-color-main g-color-primary--hover" href="index.html">Portfolio</a>
                 <i class="g-color-gray-light-v2 g-ml-5">/</i>
@@ -85,7 +82,7 @@
     
     </div>
     <div class="col-lg-5">
-      <img class="img-fluid w-100" src="image/yy1.jpg" alt="Image Description">
+      <img class="img-fluid w-100" src="image/yun.jpg" alt="Image Description">
       </iv>
     </div>
   </div>
