--- a/aboutme.html
+++ b/aboutme.html
@@ -54,7 +54,11 @@
                 <i class="g-color-gray-light-v2 g-ml-5">/</i>
               </li>
               <li class="list-inline-item g-color-primary">
-                <span>About Me</span>
+                <span>AboutMe</span>
+              </li>
+              <li class="list-inline-item g-mr-5">
+                <a class="u-link-v5 g-color-main g-color-primary--hover" href="contacts.html">Contacts</a>
+                <i class="g-color-gray-light-v2 g-ml-5">/</i>
               </li>
             </ul>
           </div>
