--- a/contacts.html
+++ b/contacts.html
@@ -86,7 +86,8 @@
     <!-- Contact Form -->
     <section class="container">
       <!-- Icon Blocks -->
-      <div class="row no-gutters u-shadow-v21 g-mt-minus-100">
+      <div class="row ustify-content-center no-gutters u-shadow-v21 g-mt-minus-100">
+       
         <div class="col-sm-6 col-md-4 g-brd-right--md g-brd-gray-light-v4">
           <!-- Icon Blocks -->
           <div class="g-bg-white text-center g-py-100">
@@ -118,7 +119,7 @@
                 <i class="icon-electronics-005 u-line-icon-pro"></i>
               </span>
             <h4 class="h5 g-font-weight-600 g-mb-5">Email</h4>
-            <span class="d-block">yuny9968@gmail.com</span>
+            <span class="d-block">yunyang0331@gmail.com</span>
           </div>
           <!-- End Icon Blocks -->
         </div>
@@ -158,7 +159,7 @@
               </div>
 
               <div class="text-center">
-                <button id="send" class="btn u-btn-primary g-font-weight-600 g-font-size-13 text-uppercase g-rounded-25 g-py-15 g-px-30" type="submit" role="button ng-click="submitEmail()">Send Request</button>
+                <button id="submitButton" class="btn u-btn-primary g-font-weight-600 g-font-size-13 text-uppercase g-rounded-25 g-py-15 g-px-30" type="submit" role="button" ng-click="submitEmail()">Send Request</button>
               </div>
             </form>
           </div>
