--- a/aboutme.html
+++ b/aboutme.html
@@ -79,10 +79,15 @@
           &#8220;
         </em>
       <blockquote class="lead g-font-style-italic g-line-height-2 g-pl-30 g-mb-30"> I would describe myself as a faster learner and self-motivated person. 
-        When I first came to US, I even didn’t know how to shopping at grocery store. But only few years later,
-         I was one of the honor student in my batch while I was pursuing a A.S degree in DURHAM TECH. In my previous job,
-          I was responsible for design, building, maintaining and updating the company website. For example, Use HTML, CSS, JavaScript and Bootstrap to redesign eimageglobal.net, implemented new responsive, mobile-friendly display with increased mobile traffic by 20%+; Designing the layout of the website Medicamind.com independently; Adding partner and our team webpages to accubeing.com; Maintain and upgrade the websites on a daily basis.
-          Collaborate with other developers. For example, Use Bitbucket and Trello to develop and maintain the OpenMRS system; Creating and editing technical documentations for OpenMRS.
+        When I initially arrived in the US, my command of English was limited. However, within a few short years,
+        I distinguished myself as an honor student while pursuing my A.S. degree at Durham Tech. During my previous role, 
+        I held comprehensive responsibilities involving the design, construction, maintenance, and updates of our company's website. 
+        Notably, I utilized HTML, CSS, JavaScript, and Bootstrap to overhaul eimageglobal.net, implementing a responsive,
+        mobile-friendly design that boosted mobile traffic by over 20%. I independently crafted the layout for Medicamind.com and
+        integrated partner and team webpages into accubeing.com. Additionally, I ensured daily maintenance and enhancements across 
+        these websites. Collaboration was a key aspect, as I worked alongside other developers, utilizing tools like Bitbucket and
+        Trello to develop and manage the OpenMRS system, while also creating and refining technical documentation for OpenMRS.
+      
            </blockquote>
     
     </div>
