--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="row">
             <div class="col-sm-6">
               <!-- Progress Bar v2 -->
-              <h4 class="h6 g-mb-5">HTML, CSS, JavaScript - 95%</h4>
+              <h4 class="h6 g-mb-5">HTML, CSS, JavaScript, WordPress - 95%</h4>
               <div class="js-hr-progress-bar progress rounded-0 g-height-4 mb-5">
                 <div class="js-hr-progress-bar-indicator progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
